--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <main>
         <section class="main-login">
             <div class="login">
-            <a href="index.html"><img src="/imagenes/wolf_emblem.png" alt="logo lobo"></a>
+            <a href="index.html"><img src="imagenes/wolf_emblem.png" alt="logo lobo"></a>
             <h1>Acceso al Sistema</h1>
             </div> 
             <div class="login"> 
