--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 </head>
 <body>
     <header>
-            <img src="/imagenes/BannerEventosSistema-desktop.jpg" alt="banner sistema lobo">
+            <img src="imagenes/BannerEventosSistema-desktop.jpg" alt="banner sistema lobo">
     </header>
     <main>
         <div class="selection-box">
             <!-- <h2>La siguiente información no me pertenece, ni me representa. La utilizo como representación de la página original y uso con fines ilustrativos de una mejor experiencia al usuario. ninguna de la acciones realizadas en esta representación grafica realiza acción alguna.  </h2> -->
             <br>
-            <a href="vacantes.html"> <img src="/imagenes/lobo_portada_FACEBOOK.jpg" alt="Vacantes">
+            <a href="vacantes.html"> <img src="imagenes/lobo_portada_FACEBOOK.jpg" alt="Vacantes">
             <p>¡Unete a nuestro Equipo!</p>
             <p>▲ Consulta nuestras Vacantes ▲</p></a>
         </div>
         <div class="selection-box">
-            <a href="login.html"><img src="/imagenes/lobo-perfil_FA.jpg" alt="Ingreso al Sistema">
+            <a href="login.html"><img src="imagenes/lobo-perfil_FA.jpg" alt="Ingreso al Sistema">
             <p>▲ Acceso al Sistema ▲</a></p>
         </div>
     </main>
