--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                     <input type="text" autocomplete="on" required >
                     <label for="password" class="label">Contraseña</label>
                     <input type="password" placeholder="•••••••"  required >
-                    <a href="/Home.html">Ingresar</a>
+                    <a href="Home.html">Ingresar</a>
                     <label>¿Olvidaste tu contraseña?</label>
                 </form>
             </div>
