--- a/formulario.html
+++ b/formulario.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-            <img src="/imagenes/BannerEventosSistema-desktop.jpg" alt="banner sistema lobo">
+            <img src="imagenes/BannerEventosSistema-desktop.jpg" alt="banner sistema lobo">
     </header>
     <main>
         <section class="formulario">
@@ -130,8 +130,8 @@
                     </select>
                 </div>                      
             </div>
-           <button type="submit"><a href="/Mensaje.html">Enviar Solicitud</a></button> 
-           <button type="submit"><a href="/index.html">Volver al Inicio</a></button> 
+           <button type="submit"><a href="Mensaje.html">Enviar Solicitud</a></button> 
+           <button type="submit"><a href="index.html">Volver al Inicio</a></button> 
         </section>
     </main>
     <footer>
