--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="desktop.css" media="(min-width: 880px)">
-    <link rel="icon" href="/imagenes/wolf_emblem.png">
+    <link rel="icon" href="imagenes/wolf_emblem.png">
     <title>Home</title>
 </head>
 <body>
@@ -19,28 +19,28 @@
     <main>
         <aside class="nav-bar">
             <a href="#">Inicio<span class="i1"></span></a>
-            <a href="/Confirmaciones.html">Confirmaciones<span class="i2"></span></a>
+            <a href="Confirmaciones.html">Confirmaciones<span class="i2"></span></a>
             <a href="#">Saldos<span class="i3"></span></a>
             <a href="#">Calendario<span class="i4"></span></a>
-            <a href="/index.html">Salir<span class="i5"></span></a>
+            <a href="index.html">Salir<span class="i5"></span></a>
         </aside>
         <h1>Vancantes Internas</h1>
         <section class="content">
             <div class="content-img">
-                <img src="/imagenes/Seguridad.jpeg" alt="">
+                <img src="imagenes/Seguridad.jpeg" alt="">
             </div>
             <div class="content-img">
-                <img src="/imagenes/Soporte Tecnico en sistemas.jpg" alt="">
+                <img src="imagenes/Soporte Tecnico en sistemas.jpg" alt="">
             </div>
         </section>
         <h1>Vancantes Referidos</h1>
         <section class="content">
            
             <div class="content-img">
-                <img src="/imagenes/DIFUSIÓN  LOCAL CREW.jpg" alt="">
+                <img src="imagenes/DIFUSIÓN  LOCAL CREW.jpg" alt="">
             </div>
             <div class="content-img">
-                <img src="/imagenes/STAGE REFERIDOS.jpg" alt="">
+                <img src="imagenes/STAGE REFERIDOS.jpg" alt="">
             </div>
         </section>
 
