--- a/Mensaje.html
+++ b/Mensaje.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="mensaje.css">
-    <link rel="icon" href="/imagenes/wolf_emblem.png">
+    <link rel="icon" href="imagenes/wolf_emblem.png">
     <title>¡Gracias por tu visita!</title>
 </head>
 <body>
