--- a/Confirmaciones.html
+++ b/Confirmaciones.html
@@ -9,20 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="desktop.css" media="(min-width: 880px)">
-    <link rel="icon" href="/imagenes/wolf_emblem.png">
+    <link rel="icon" href="imagenes/wolf_emblem.png">
     <title>Confirmaciones</title>
 </head>
 <body>
     <header>
-            <img src="/imagenes/BannerEventosSistema-desktop.jpg" alt="banner sistema lobo">
+            <img src="imagenes/BannerEventosSistema-desktop.jpg" alt="banner sistema lobo">
     </header>
     <main>
         <aside class="nav-bar">
-            <a href="/Home.html">Inicio<span class="i1"></span></a>
+            <a href="Home.html">Inicio<span class="i1"></span></a>
             <a href="#">Confirmaciones<span class="i2"></span></a>
             <a href="#">Saldos<span class="i3"></span></a>
             <a href="#">Calendario<span class="i4"></span></a>
-            <a href="/index.html">Salir<span class="i5"></span></a>
+            <a href="index.html">Salir<span class="i5"></span></a>
         </aside>
         <H2>PUESTOS ASIGNADOS: LOCAL CREW | SEGURDAD | CONTROL DE ACCESOS | TAQUILLAS</H2>
         <h1>Eventos por Confirmar</h1>
