--- a/vacantes.html
+++ b/vacantes.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="vacantes.css">
     <link rel="stylesheet" href="desktop.css" media="(min-width: 880px)">
-    <link rel="icon" href="/imagenes/wolf_emblem.png">
+    <link rel="icon" href="imagenes/wolf_emblem.png">
     <title>Vacantes</title>
 </head>
 <body>
