--- a/formulario.html
+++ b/formulario.html
@@ -130,8 +130,8 @@
                     </select>
                 </div>                      
             </div>
-           <button type="submit"><a href="Mensaje.html">Enviar Solicitud</a></button> 
-           <button type="submit"><a href="index.html">Volver al Inicio</a></button> 
+           <button><a href="Mensaje.html">Enviar Solicitud</a></button> 
+           <button><a href="index.html">Volver al Inicio</a></button> 
         </section>
     </main>
     <footer>
