--- a/Confirmaciones.html
+++ b/Confirmaciones.html
@@ -37,7 +37,7 @@
             <p>LOCAL CREW | AMERICA VS CHIVAS | 00/00/00 12:00 PM <span></span></p>
             <p>SEGURIDAD | DIABLOS VS TIGRES | 00/00/00 12:00 PM <span></span></p>
         </section>  
-        <button type="submit"><a href="/Mensaje.html">Imprimir Eventos</a></button>  
+        <button type="submit"><a href="Mensaje.html">Imprimir Eventos</a></button>  
     </main>
 
     <footer>
